@@ -128,6 +128,49 @@ Affiliation: Ximian.<br />
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-October/msg00008.html">http://mail.gnome.org/archives/foundation-announce/2002-October/msg00008.html</a>
 </P>
 
+<P>4. BILL HANEMAN<br />
+&quot;
+I am active not only in the accessibility project work, 
+but also am actively working with the groups doing Mozilla, 
+OpenOffice, and Java integration with GNOME.  My goals for GNOME:
+a great developer platform, a complete user desktop environment
+that is not only free but fully accessible to everyone.  
+I am a also Sun Microsystems employee, but would serve as an 
+"individual contributor" and always keep the "big picture" for GNOME
+paramount.
+&quot;<br />
+Affiliation: Sun Microsystems.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00000.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00000.html</a>
+</P>
+
+<P>5. MIKE NEWMAN<br />
+&quot;
+I'm standing as an independant, experienced committee worker with the
+international and democratic interests of GNOME as my prime concerns,
+along with transparent and accessible board activity. Having been
+involved in GNOME for two years working with the membership committee,
+and with a great deal of experience in similar roles I feel I have a
+wide view of GNOME's goals and the capabilities and time to serve as an
+effective board member.
+&quot;<br />
+Affiliation: None.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00001.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00001.html</a>
+</P>
+
+<P>6. GLYNN FOSTER<br />
+&quot;
+I do GNOME hacking at Sun. I don't do celery. I do motivation 
+and energy. I don't do philosophy, politics or vegemite. I do
+random documentation. I don't do cucumber. I do weekly release 
+team meetings. I don't do toilet cleaning. I do climbing and beer. 
+I don't do chewing gum. I do opinions, sleep and campus boards. I 
+don't do veruccas. I do mobile phones badly. I don't do cocktails 
+and hard liquor.
+&quot;<br />
+Affiliation: Sun Microsystems.<br />
+Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2002-November/msg00002.html">http://mail.gnome.org/archives/foundation-announce/2002-November/msg00002.html</a>
+</P>
+
 <center>
 <P>
 <BR><BR>
@@ -144,12 +187,12 @@ will vote by returning the ballot via e-mail. A public archive of the
 ballot returns will be available after the elections end on December
 2.</P>
 
-<!--<P>Also, keep in mind that there is a 4-person maximum on the number
+<P>Also, keep in mind that there is a 4-person maximum on the number
 of people affiliated with any one company that can be on the board:
 if more than 4 persons from one company get elected, only the top 4
 vote getters will get on. You will be able to vote for up to 11
 candidates of your choice, with no restrictions, except that you
-cannot vote more than once for the same candidate.</P>-->
+cannot vote more than once for the same candidate.</P>
 
 <P>Additional election-related materials are available at
 <A HREF="http://foundation.gnome.org">http://foundation.gnome.org</A>.</P>
