@@ -1,3 +1,7 @@
+2002-11-03  Vincent Untz  <vincent@vuntz.net>
+
+	* ballot-summary.html: three new candidates.
+
 2002-10-30  Vincent Untz  <vincent@vuntz.net>
 
 	* ballot-summary.html: third candidate.
